# spl-szz

./: .gitignore  Cargo.toml  README.md  bugfix_commits.json  config.json  result.json
analyzed_results/: analisador.js  bugfix_commits.json  result_raszz.json  result_spl.json
src/: main.rs
src/config/: config.rs
src/core/: graph.rs  mod.rs  szz.rs
src/data/: bfc.rs  bfc_result.rs  mod.rs  utils.rs
src/data/input/: json.rs
src/data/output/: json.rs
src/engine/: git.rs
src/utils/: hunk.rs  mod.rs  utils.rs  vertex.rs
