[package]
name = "spl-szz"
version = "0.1.0"
authors = ["Jose Fortes <jose.fortes.neto@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
regex = "1"
chrono = "0.4"
petgraph = "0.6.0"